Optimized dagger migration